fix: nav items align fixed

--- a/shared/styles.css
+++ b/shared/styles.css
@@ -194,6 +194,7 @@ section {
 
 .nav-links {
     display: flex;
+    align-items: center;
     gap: 2rem;
 }
 
